fix jump

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -10,6 +10,7 @@
 
   &--with-menu {
     overflow: hidden;
+    margin-right: 17px;
   }
 
   &__header {
@@ -30,7 +31,7 @@
     left: 0;
     right: 0;
     transform: translateX(100%);
-    transition: transform 0.5s;
+    transition: all 0.5s;
 
     &:target {
       transform: translateX(0);
